--- a/static/css/home.css
+++ b/static/css/home.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     min-height: 350px;
-    background-image: url('images/banner.jpg');
+    background-image: url('../images/banner.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
