--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,6 +6,7 @@
     background-image: url('../images/banner.jpg');
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
