--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,11 @@
+#header {
+    position: sticky;
+    top: 0;
+    height: 60px;
+    width: 100%;
+    background-color: #000;
+}
+
 #banner {
     position: relative;
     width: 100%;
