--- a/static/css/home.css
+++ b/static/css/home.css
@@ -12,6 +12,14 @@
     z-index: 10;
 }
 
+#header img {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    height: 80px;
+    border-radius: 50%;
+}
+
 #banner {
     position: relative;
     width: 100%;
