--- a/static/css/home.css
+++ b/static/css/home.css
@@ -56,6 +56,7 @@
 
 #quiz-container {
     width: 100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
