--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,10 +6,11 @@
 #header {
     position: sticky;
     top: 0;
-    height: 60px;
+    height: 46px;
     width: 100%;
     background-color: #000;
     z-index: 10;
+    border: 8px solid #000;
 }
 
 #header img {
@@ -45,6 +46,10 @@
     background-color: #000;
     opacity: 0.8;
     z-index: 1;
+}
+
+#banner h1 {
+    font-size: 50px;
 }
 
 #banner h1,
