--- a/static/css/home.css
+++ b/static/css/home.css
@@ -59,6 +59,7 @@
     z-index: 2;
 }
 
+
 #quiz-container {
     width: 100%;
     min-height: 100vh;
@@ -69,6 +70,22 @@
     padding: 30px;
     box-sizing: border-box;
     background-color: #f5f5f5;
+}
+
+#form-container {
+    width: 60%;
+}
+
+.side-ad-banner {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.vertical-ad-banner {
+    width: 160px;
+    height: 600px;
 }
 
 #quiz-form {
