--- a/static/css/home.css
+++ b/static/css/home.css
@@ -67,6 +67,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: nowrap;
     padding: 30px;
     box-sizing: border-box;
     background-color: #f5f5f5;
@@ -78,7 +79,7 @@
 
 .side-ad-banner {
     display: flex;
-    flex-grow: 1;
+    width: 20%;
     justify-content: center;
     align-items: center;
 }
